--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "test:coverage:lcov": "nyc --reporter=lcovonly npm run test"
   },
   "dependencies": {
-    "got": "^11.8.2"
+    "got": "^11.8.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/mysql": "^2.15.19",
     "eslint": "^8.1.0",
     "ncp": "^2.0.0",
     "npm-check": "^5.9.2",
