--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "alwaysStrict": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
   "include": [
-    "./src/**/*"
+    "src/"
+  ],
+  "exclude": [
+    "config/"
   ]
 }
