--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/mysql": "^2.15.19",
     "eslint": "^8.1.0",
+    "mysql2": "^2.3.2",
     "ncp": "^2.0.0",
     "npm-check": "^5.9.2",
     "rimraf": "^3.0.2",
