--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dublin-no2-pollution",
+  "name": "dublin-pollution-piper",
   "author": {
     "name": "Marc Solé",
     "email": "msolefonte@gmail.com",
