--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "build:clean": "rimraf dist && tsc && ncp src/types dist/types",
     "check-dependencies": "npm-check --ignore ts-node",
     "check-dependencies:update": "npm-check --update",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "start": "node dist/index.js",
     "test": "mocha -r ts-node/register 'tests/**/*.test.ts' --timeout 30000 --require mocha-steps",
     "test:coverage": "nyc --reporter=html --reporter=text npm run test",
@@ -41,10 +41,19 @@
     "mysql2": "^2.3.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "^9.0.0",
     "@types/mysql": "^2.15.19",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "chai": "^4.3.4",
     "eslint": "^8.1.0",
+    "eslint-plugin-sort-class-members": "^1.14.0",
+    "mocha": "^9.1.3",
+    "mocha-steps": "^1.3.0",
     "ncp": "^2.0.0",
     "npm-check": "^5.9.2",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
