--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -6,7 +6,7 @@ on:
     branches: [ master, dev ]
 jobs:
   build:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [16.x]
