--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "start": "node dist/index.js",
     "test": "mocha -r ts-node/register 'tests/**/*.test.ts' --timeout 30000 --require mocha-steps",
-    "test:coverage": "nyc --reporter=html --reporter=text npm run test",
-    "test:coverage:lcov": "nyc --reporter=lcovonly npm run test"
+    "test:coverage": "nyc --reporter=html --reporter=text npm run test"
   },
   "dependencies": {
     "got": "^11.8.2",
