--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -19,11 +19,4 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Run tests and generate coverage report
-      run: npm run test:coverage:lcov
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        file: ./coverage/lcov.info
-        name: codecov
-        fail_ci_if_error: true
-        verbose: true
+      run: npm run test:coverage
