--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -1,6 +1,6 @@
 codecov:
   bot: "codecov"
-  require_ci_to_pass: yes
+  require_ci_to_pass: true
 coverage:
   round: down
   range: 60..100
@@ -16,4 +16,4 @@ coverage:
 comment:
   layout: "diff,files"
   behavior: default
-  require_changes: no
+  require_changes: false
