--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "alwaysStrict": true,
-    "strict": true,
-    "skipLibCheck": true
+    "strict": true
   },
   "include": [
     "src/"
