--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -20,6 +20,14 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Run tests and generate coverage report
+      env:
+        MODE: CI/CD
+        DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+        DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
+        DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+        DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+        DATABASE_DATABASE: ${{ secrets.DATABASE_DATABASE }}
+        TOM_TOM_API_KEY: ${{ secrets.TOM_TOM_API_KEY }}
       run: npm run test:coverage:lcov
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
